--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <form class="add text-center my-4">
       <label class="text-light">Add a new todo...</label>
       <input class="form-control m-auto" type="text" name="add" />
+      <input class="btn btn-primary mt-3" id="submit" type="submit" value="Submit">
     </form>
 
   </div>
